--- a/purrfectpetfinder/src/components/Register/Register.css
+++ b/purrfectpetfinder/src/components/Register/Register.css
@@ -1,7 +1,8 @@
-.login-wrapper {
+.register-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+
 }
