--- a/purrfectpetfinder/src/components/Cards/Cards.css
+++ b/purrfectpetfinder/src/components/Cards/Cards.css
@@ -11,15 +11,16 @@
     width: 300px;
     height: 50vh;
     padding: 20px;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     background-size: cover;
     background-position: center;
     margin-bottom: 30px;
-    box-shadow: 0px 20px 60px 0px rgba(0,0,.3)
+    /* box-shadow: 0px 2px 6px 0px rgb(77, 76, 76) */
 }
 .moreInfo {
     color: orange;
+    justify-self: right;
 }
 .swipe {
-    position: absolute;
+    position:fixed;
 }
