--- a/purrfectpetfinder/src/components/Header/Header.css
+++ b/purrfectpetfinder/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header{
-    /* background-color: yellow;
-    display: flex;
+    background-color: yellow;
+    /* display: flex;
     justify-content: space-between;
     align-items: center; */
     width: 100%;
@@ -13,5 +13,5 @@
 .header-icons .profile {
     padding: 3vw;
     color: black;
-    box-shadow: 0px 10px 20px 0px rgba(0,0,0)
+    justify-items: right;
 }
